--- a/MBXml/MBXml.csproj
+++ b/MBXml/MBXml.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMImporter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
